@@ -1,3 +1,8 @@
+2008-09-10  Badlop  <badlop@process-one.net>
+
+	* src/mod_webpresence.erl (get_presences): Return only sessions
+	that have presence
+
 2008-07-29  Badlop  <badlop@process-one.net>
 
 	* src/mod_webpresence.erl: Fix calls to supervisor:terminate_child
